<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="output">0</string>
    <!--    Tags    -->
    <!--    Col 1   -->
    <string name="btn_tag_7">Button_7</string>
    <string name="btn_tag_4">Button_4</string>
    <string name="btn_tag_1">Button_1</string>
    <string name="btn_tag_Negative">Button_Negative</string>
    <!--    Col 2   -->
    <string name="btn_tag_8">Button_8</string>
    <string name="btn_tag_5">Button_5</string>
    <string name="btn_tag_2">Button_2</string>
    <string name="btn_tag_0">Button_0</string>
    <!--    Col 3   -->
    <string name="btn_tag_9">Button_9</string>
    <string name="btn_tag_6">Button_6</string>
    <string name="btn_tag_3">Button_3</string>
    <string name="btn_tag_Decimal">Button_Decimal</string>
    <!--    Col 4   -->
    <string name="btn_tag_SqRt">Button_SqRt</string>
    <string name="btn_tag_Divide">Button_Divide</string>
    <string name="btn_tag_Multiply">Button_Multiply</string>
    <string name="btn_tag_Addition">Button_Addition</string>
    <!--    Col 5  -->
    <string name="btn_tag_Clear">Button_Clear</string>
    <string name="btn_tag_Percent">Button_Percent</string>
    <string name="btn_tag_Subtract">Button_Subtract</string>
    <string name="btn_tag_Equals">Button_Equals</string>
    
    <!--    Text    -->
    <!--    Col 1   -->
    <string name="btn_txt_7">7</string>
    <string name="btn_txt_4">4</string>
    <string name="btn_txt_1">1</string>
    <string name="btn_txt_Negative">\u00B1</string>
    <!--    Col 2   -->
    <string name="btn_txt_8">8</string>
    <string name="btn_txt_5">5</string>
    <string name="btn_txt_2">2</string>
    <string name="btn_txt_0">0</string>
    <!--    Col 3   -->
    <string name="btn_txt_9">9</string>
    <string name="btn_txt_6">6</string>
    <string name="btn_txt_3">3</string>
    <string name="btn_txt_Decimal">.</string>
    <!--    Col 4   -->
    <string name="btn_txt_SqRt">\u221A</string>
    <string name="btn_txt_Divide">\u00F7</string>
    <string name="btn_txt_Multiply">\u00D7</string>
    <string name="btn_txt_Addition">+</string>
    <!--    Col 5  -->
    <string name="btn_txt_Clear">C</string>
    <string name="btn_txt_Percent">%</string>
    <string name="btn_txt_Subtract">-</string>
    <string name="btn_txt_Equals">=</string>
</resources>